# rdp-algo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrdp_test.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
pyrdp/: __init__.py
rdp_algo/: __init__.py
tests/: rdp_algo_test.py
