[metadata]
name = rdp-algo
version = 0.1.0
description = Ramer-Douglas-Peuker algorithm python implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flowake/rdp-algo
author = Florian Stasse
author_email = florian.stasse@proton.me
license = MIT
license_file = LICENSE
platforms = Linux, Windows, MacOs
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.8

[bdist_wheel]
universal = True

[options.extras_require]
dev =
    pre-commit
lint =
    black
    flake8
    pylint
test =
    pytest

[flake8]
max-line-length = 88
extend-ignore = E203

[pylint.FORMAT]
max-line-length = 88

[isort]
profile = black
